--- a/src/Pages/About/About_banner/About.module.css
+++ b/src/Pages/About/About_banner/About.module.css
@@ -3,7 +3,6 @@
 
 
 .about_banner{
-    background: linear-gradient(180deg, #FFFFFF 10%, #85CBE9  69.65%);
     height: 100%;
     overflow-x: hidden;
     padding-top: 200px;
@@ -74,7 +73,7 @@
 /* Banner */
 
 .about_bannerOne{
-    background: url('../../../assets/About/aboutBannerOne.png') center / cover;
+    background: url('../../../assets/About/aboutBanner.jpg') center / cover;
     width: 100%;
     height: 900px;
 }
@@ -116,7 +115,7 @@
 }
 
 .about_bannerTwo{
-    background: url('../../../assets/About/aboutBannerTwo.png') center / cover;
+    background: url('../../../assets/About/aboutBannerOne.png') center / cover;
     width: 100%;
     height: 650px;
 }
@@ -396,7 +395,6 @@
 
 @media only screen and (max-width:768px) {
     .about_banner{
-        background: linear-gradient(180deg, #FFFFFF 0%, #85CBE9 69.65%);
         height: 100%;
         padding-top: 150px;
     }
@@ -681,7 +679,6 @@
         padding-bottom: 100px;
     }
     .about_banner{
-        background: linear-gradient(180deg, #FFFFFF 0%, #85CBE9 69.65%);
         height: 100%;
         padding-top: 150px;
     }
@@ -1025,7 +1022,7 @@
     }
 
     .about_banner{
-        background: linear-gradient(180deg, #FFFFFF 20%, #85CBE9  69.65%);
+        /* background: linear-gradient(180deg, #FFFFFF 20%, #85CBE9  69.65%); */
         height: 100%;
         overflow-x: hidden;
         padding-top: 100px;
