--- a/src/Pages/About/About_banner/About.module.css
+++ b/src/Pages/About/About_banner/About.module.css
@@ -73,7 +73,7 @@
 /* Banner */
 
 .about_bannerOne{
-    background: url('../../../assets/About/aboutBanner.jpg') center / cover;
+    background: url('../../../assets/About/aboutBanner.JPG') center / cover;
     width: 100%;
     height: 900px;
 }
